--- a/todo.txt
+++ b/todo.txt
@@ -1,11 +1,9 @@
-
-
-
+-- TODO --
+* Reserve ticket functionality
+* Student database upload
+* Print ticket functionality
 * change the time to am/pm
-
-
-
-
+* create 'pending' flag for ticket to avoid TTCTTOU - investigate transaction or locking the table.
 
 -- Done --
 * venue pages should only show tickets for that venue and articles would show tickets for any venues.
